--- a/signup.css
+++ b/signup.css
@@ -15,7 +15,7 @@ body{
     text-align: center;
     margin-bottom: 20px;
     color: #333;
-    width: 40vw;
+    width: 37vw;
 
 }
 label {
@@ -44,4 +44,19 @@ input[type="submit"] {
     border-radius: 5px;
     margin-top: 20px;
     cursor: pointer;
+}
+.captcha{
+    font-family: 'Impact', sans-serif;
+
+            font-size: 30px;
+            /* Taille de la police */
+            color: #333;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            background-color: #f3f3f3;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+            margin: 0 auto; /* Centre horizontalement */
+            width: 50%;
 }
