--- a/fiche_jeux.css
+++ b/fiche_jeux.css
@@ -112,3 +112,66 @@ h1{
 .retour-accueil a:hover{
     color: red;
 }
+.star-rating{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    cursor: pointer;
+    margin: 10px 0;
+}
+.star{
+    font-size: 24px;
+    color: #ccc;
+    transition: color 0.2s;
+}
+.star:hover,
+.star.selected{
+    color: gold;
+
+}
+.avis{
+    background-color: white;
+   padding: 15px;
+   margin-top: 15px;
+   border-radius: 8px;
+   box-shadow: 0 2px 3px black;
+   transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+.avis:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 4px 6px black;
+}
+.avis strong{
+    font-size: 16px;
+    color: #333;
+}
+.avis span{
+    font-size: 14px;
+    color: #f39c12;
+}
+.avis p{
+    margin-top: 10px;
+    line-height: 1.6;
+    font-size: 14px;
+    color: #555;
+}
+.avis small{
+    display: block;
+    color: #666;
+    font-size: 12px;
+    margin-top: 10px;
+}
+textarea{
+    width: 90%;
+    min-height: 80px;
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none;
+    font-size: 14px;
+}
+button{
+    color: white;
+    background-color: rgb(3, 194, 3);
+}
