--- a/fiche_jeux.css
+++ b/fiche_jeux.css
@@ -51,9 +51,8 @@
 strong{
     color: black;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
     text-align: center;
-    text-decoration: none;
 }
 .description{
     color: black;
@@ -81,6 +80,7 @@ form{
     justify-content: center;
     font-size: 30px;
     text-decoration: none;
+    margin-top: 15px;
 }
 .details{
     font-size: 15px;
@@ -101,6 +101,8 @@ h1{
 }
 .prix{
     text-align: center;
+    font-size: 40px;
+    margin-bottom: 30px;
 }
 .retour-accueil a{
     color: brown;
@@ -209,4 +211,8 @@ label{
     font-size: 50px;
     text-align: center;
     color: rgb(65, 0, 186);
+}
+.moyenne-avis   {
+    font-size: 25px;
+    margin-top: 20px;
 }
