--- a/jeux.css
+++ b/jeux.css
@@ -30,7 +30,6 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    padding: 10px;
 }
 .jeux-item img{
     max-height: 200px;
@@ -204,7 +203,7 @@ font-weight: bold;
 }
 .prix{
     text-align: center;
-    font-size: 20px;
+    font-size: 40px;
 }
 .details{
     font-size: 15px;
@@ -222,4 +221,8 @@ h2{
     display: flex;
     justify-content: space-around;
 }
-
+.moyenne-avis{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 18px;
+}
