--- a/jeux.css
+++ b/jeux.css
@@ -226,3 +226,27 @@ h2{
     margin-bottom: 30px;
     font-size: 18px;
 }
+.star-rating{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    cursor: pointer;
+    background: rgb(142, 138, 137, 0.8) ;
+    width: 250px;
+    font-size: 40px;
+    padding: 20px;
+    border: 2px solid  rgb(142, 138, 137);
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+.star{
+    font-size: 24px;
+    color: #ccc;
+    transition: color 0.2s;
+}
+.star:hover,
+.star.selected{
+    color: gold;
+
+}
