--- a/paiement.css
+++ b/paiement.css
@@ -1,18 +1,50 @@
-body{
+ body{
     background: linear-gradient(rgba(247, 244, 244, 0.733), rgba(242, 241, 241, 0.696)), no-repeat, fixed
                   url(img/DALL·E\ 2024-11-29\ 13.29.03\ -\ A\ vibrant\ and\ colorful\ image\ showcasing\ various\ video\ games\ integrated\ into\ a\ single\ scene.\ The\ image\ includes\ a\ retro\ arcade\ machine\ with\ a\ glowing\ s.webp);
 }
-#card-element{
-margin: 12px;
-size: 50px;
+
+
+h1, h2, h3 {
+    color: #343a40;
+    text-align: center;
+    margin: 20px 0;
 }
-button {
-    width: 50%;
+
+/* Formulaire de paiement */
+form#payment-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px; /* Espace entre les éléments */
+    margin: 30px auto;
+    flex-wrap: wrap; /* Permet de passer à la ligne sur petit écran */
+    max-width: 500px; /* Limite la largeur maximale du formulaire */
+}
+
+/* Réduction de la taille du champ */
+#card-element {
+    flex: 1; /* Prend l'espace disponible */
+    border: 1px solid grey;
     padding: 10px;
-    background-color: #5cb85c;
-    color: white;
-    border: none;
+    margin: 10px;
     border-radius: 5px;
-    margin-top: 20px;
+}
+
+button {
+    background-color: #5cb85c;
+    color: #ffffff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
     cursor: pointer;
-    }
+    transition: background-color 0.3s ease;
+}
+
+
+#payment-result {
+    margin-top: 20px;
+    font-size: 16px;
+    text-align: center;
+}
+
+
