--- a/paiement.css
+++ b/paiement.css
@@ -3,46 +3,46 @@ body{
                   url(img/DALL·E\ 2024-11-29\ 13.29.03\ -\ A\ vibrant\ and\ colorful\ image\ showcasing\ various\ video\ games\ integrated\ into\ a\ single\ scene.\ The\ image\ includes\ a\ retro\ arcade\ machine\ with\ a\ glowing\ s.webp);
 }
 
-
 h1, h2, h3 {
     color: #343a40;
     text-align: center;
     margin: 20px 0;
 }
 
-/* Formulaire de paiement */
 form#payment-form {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 15px; /* Espace entre les éléments */
+    gap: 15px; 
     margin: 30px auto;
-    flex-wrap: wrap; /* Permet de passer à la ligne sur petit écran */
-    max-width: 500px; /* Limite la largeur maximale du formulaire */
+    flex-wrap: wrap; 
+    max-width: 500px; 
 }
 
-/* Réduction de la taille du champ */
+
 #card-element {
-    flex: 1; /* Prend l'espace disponible */
+    flex: 1; 
     border: 1px solid grey;
     padding: 10px;
-    background-color: #5cb85c;
-    color: white;
-    border: none;
+    margin: 10px;
     border-radius: 5px;
-    margin-top: 20px;
+}
+
+button#bouttonpayer {
+    background-color: #5cb85c;
+    color: #ffffff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     position: relative;
     top: 40px;
-    left: -270px;
+    left: -260px;
 }
-label {
-    margin-top: 5px;
-    color: #333;
-}
-.titre_paiement{
+
+#payment-result {
+    margin-top: 20px;
+    font-size: 16px;
     text-align: center;
 }
-
-
