--- a/jeux.css
+++ b/jeux.css
@@ -68,7 +68,7 @@ form{
     justify-content: center;
 }
 .ajout-panier{
-    color: #d2efa9;
+    color: white;
     background-color: rgb(3, 194, 3);
 }
 .see_cart{
@@ -97,6 +97,7 @@ display: flex;
 .categorie_jeux{
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
     .prix_item{
         color: rgb(181, 3, 3);
@@ -231,14 +232,14 @@ h2{
     justify-content: center;
     gap: 5px;
     cursor: pointer;
-    background: rgb(142, 138, 137, 0.8) ;
     width: 250px;
     font-size: 40px;
     padding: 20px;
-    border: 2px solid  rgb(142, 138, 137);
     border-radius: 10px;
     margin: 0 auto;
     margin-top: 10px;
+    background: rgb(142, 138, 137, 0.8) ;
+    border: 2px solid  rgb(142, 138, 137);
 }
 .star{
     font-size: 24px;
@@ -249,4 +250,24 @@ h2{
 .star.selected{
     color: gold;
 
+}
+.note_item{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(181, 3, 3);
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+.noteMin{
+    color: black;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
+.reset-button{
+    color: white;
+    background-color: rgb(3, 194, 3);
+    font-size: 20px;
+    margin-top: 30px;
 }
