--- a/favoris.css
+++ b/favoris.css
@@ -99,6 +99,7 @@ form{
 
 .prix{
     text-align: center;
+    font-size: 40px;
 }
 .details{
     font-size: 15px;
@@ -131,4 +132,9 @@ h2{
     font-size: 50px;
     display: flex;
     justify-content: center;
+}
+.moyenne-avis{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 18px;
 }
