--- a/research.css
+++ b/research.css
@@ -14,6 +14,11 @@
     /* justify-content: space-between; */
 
 }
+.moyenne-avis{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 18px;
+}
 .jeux-item{
     display: flex;
     flex-direction: column  ;
@@ -116,6 +121,7 @@ strong{
 }
 .prix{
     text-align: center;
+    font-size: 40px;
 }
 h2{
     text-align: center;
