--- a/aventure.css
+++ b/aventure.css
@@ -15,6 +15,11 @@
     /* justify-content: space-between; */
 
 }
+.moyenne-avis{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 18px;
+}
 .jeux-item{
     display: flex;
     flex-direction: column  ;
@@ -205,6 +210,7 @@ font-weight: bold;
 }
 .prix{
     text-align: center;
+    font-size: 40px;
 }
 .details{
     font-size: 15px;
