petit changement de css

--- a/aventure.css
+++ b/aventure.css
@@ -75,7 +75,7 @@ form{
     justify-content: center;
 }
 .ajout-panier{
-    color: #d2efa9;
+    color:white;
     background-color: rgb(3, 194, 3);
 }
 .see_cart{
