--- a/accueil.css
+++ b/accueil.css
@@ -20,6 +20,7 @@
     align-items: center; /* Alignement vertical */
     margin-top: 20px;
     gap: 20px; /* Ajoute un espace entre le champ et le bouton */
+    margin-bottom: 40px !important;
 }
 
 
@@ -53,12 +54,16 @@
     display: flex; 
     align-items: center; /* Centre le texte verticalement */
     justify-content: center; /* Centre le texte horizontalement */
-    height: 50px; /* Ajuste la hauteur pour qu'il soit bien aligné avec l'input */
+    height: 50px; /* Ajuste la hauteur pour qu'il soit bien aligné avec l'input */  
+    border: none;
+    background-color: transparent!important;
 }
 
 
 .bx-search-alt-2{
-    font-size: 30px;
+    font-size: 35px;
+    color: rgb(181, 3, 3);
+    z-index: 10;
 }
 @keyframes fade {
     from {opacity: .55}
