--- a/accueil.css
+++ b/accueil.css
@@ -14,6 +14,38 @@
 .next {
     right: -80px;
 }
+.nouveautes-container {
+    display: flex;
+    justify-content: space-between; /* Répartit les images sur toute la largeur */
+    align-items: center;
+    gap: 10px; /* Espacement entre les images */
+    width: 100%;
+    padding: 0 20px; /* Ajoute un léger padding sur les côtés */
+    box-sizing: border-box;
+}
+
+.jeu-card {
+    flex: 1; /* Permet aux images de s'ajuster à l'écran */
+    text-align: center;
+    max-width: 30%; /* Limite la largeur pour éviter que ça ne devienne trop grand */
+}
+
+.jeu-image {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+.nouveautés{
+    font-size: 50px;
+    color: rgb(181, 3, 3);
+    margin-top: 30px;
+}
+
+.jeu-image:hover {
+    transform: scale(1.05); /* Effet zoom au survol */
+}
+
 .navbar-form {
     display: flex;
     justify-content: center;
