--- a/accueil.css
+++ b/accueil.css
@@ -39,7 +39,7 @@
 .nouveautés{
     font-size: 50px;
     color: rgb(181, 3, 3);
-    margin-top: 30px;
+    margin-top: 100px;
 }
 
 .jeu-image:hover {
@@ -143,3 +143,70 @@ body{
     opacity: 1;
     transition: opacity 0.3s ease-in-out; /* Réduction du délai */
 }
+.carousel-wrapperCategories {
+    display: flex;
+    transition: transform 0.5s ease;
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-section {
+    display: flex;
+    justify-content: space-between; /* Assure que les catégories sont bien réparties */
+    width: 100%;
+    flex: 0 0 100%;
+}
+
+.category-card {
+    flex: 1 1 22%; /* 4 catégories par ligne avec un petit espace */
+    max-width: 22%;
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.category-card:hover {
+    background-color: #eaeaea;
+    transform: scale(1.05);
+}
+.carousel-containerCategories{
+    position: relative;
+    width: 1500px;
+    margin: auto;
+    box-shadow: 0 5px 80px #8b73651f;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.carousel-buttonCategories {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    z-index: 10;
+}
+
+.carousel-buttonCategories.prev {
+    left: -80px;
+}
+
+.carousel-buttonCategories.next {
+    right: -80px;
+}
+
+.carousel-buttonCategories:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+ 
+
