--- a/accueil.css
+++ b/accueil.css
@@ -147,12 +147,13 @@ body{
     display: flex;
     transition: transform 0.5s ease;
     width: 100%;
-    overflow: hidden;
+    
 }
 
 .carousel-section {
     display: flex;
-    justify-content: space-between; /* Assure que les catégories sont bien réparties */
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     width: 100%;
     flex: 0 0 100%;
 }
@@ -160,19 +161,23 @@ body{
 .category-card {
     flex: 1 1 22%; /* 4 catégories par ligne avec un petit espace */
     max-width: 22%;
-    padding: 20px;
-    background-color: #f4f4f4;
+    padding: 100px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s;
+    color: black;
+    font-size: 25px;
+    background: linear-gradient(rgba(247, 244, 244, 0.733), rgba(242, 241, 241, 0.696));
 }
 
 .category-card:hover {
     background-color: #eaeaea;
     transform: scale(1.05);
+    text-decoration: none;
+    color: black;
 }
 .carousel-containerCategories{
     position: relative;
@@ -205,6 +210,12 @@ body{
 
 .carousel-buttonCategories:hover {
     background-color: rgba(0, 0, 0, 0.8);
+}
+.catégories{
+    font-size: 50px;
+    color: rgb(181, 3, 3);
+    margin-top: 100px;
+    margin-bottom: -70px;
 }
 
 
