ajout de la suppression d'un compte

--- a/compte.css
+++ b/compte.css
@@ -56,3 +56,12 @@ body{
     background: linear-gradient(rgba(247, 244, 244, 0.733), rgba(242, 241, 241, 0.696)), no-repeat, fixed
                   url(img/DALL·E\ 2024-11-29\ 13.29.03\ -\ A\ vibrant\ and\ colorful\ image\ showcasing\ various\ video\ games\ integrated\ into\ a\ single\ scene.\ The\ image\ includes\ a\ retro\ arcade\ machine\ with\ a\ glowing\ s.webp);
 }
+.delete_compte{
+    color: white;
+    background-color: red;
+    margin-top: 20px;
+    border-radius: 5px;
+    padding: 10px;
+    width: 88%;
+    border: none;
+}
