--- a/paiement.css
+++ b/paiement.css
@@ -11,11 +11,11 @@ h1, h2, h3 {
 
 form#payment-form {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 15px; 
-    margin: 30px auto;
-    flex-wrap: wrap; 
+    gap: 15px;
+    width: 100%;
     max-width: 500px; 
 }
 
@@ -84,6 +84,10 @@ label[for="selected-adresse"] {
     display: block; /* Permet d’occuper toute la largeur disponible */
     margin: 30px auto 0; /* Centrer le bouton et ajouter un espace en haut */
     transition: background-color 0.3s ease;
+    width: 100%;
+    max-width: 250px;
+    margin-top: 20px;
+    
 }
 
 /* Effet au survol */
@@ -128,6 +132,15 @@ label[for="selected-adresse"] {
     cursor: pointer;
     transition: background-color 0.3s;
 }
+.payment-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Hauteur de l'écran pour un centrage vertical */
+    width: 100%;
+}
+
 
 /* Effet hover */
 #button-ajouter:hover {
