--- a/commandes.css
+++ b/commandes.css
@@ -2,3 +2,13 @@ body{
     background: linear-gradient(rgba(247, 244, 244, 0.733), rgba(242, 241, 241, 0.696)), no-repeat, fixed
                   url(img/DALL·E\ 2024-11-29\ 13.29.03\ -\ A\ vibrant\ and\ colorful\ image\ showcasing\ various\ video\ games\ integrated\ into\ a\ single\ scene.\ The\ image\ includes\ a\ retro\ arcade\ machine\ with\ a\ glowing\ s.webp);
 }
+
+.seehistorique{
+    color: blue;
+    text-decoration: none;
+    font-size: 25px;
+    margin-top: 20px;
+}
+.seehistorique:hover{
+    color: red;
+}
