--- a/header_admin.css
+++ b/header_admin.css
@@ -1,11 +1,27 @@
-.navbar a{
-display: flex;
-justify-content: right;
-font-weight: bold;
-color: black;
-text-decoration: none;
-font-size: 25px;
-}
-.navbar a:hover{
+.navbar {
+    padding: 10px 20px;
+    margin-bottom: 150px;
+  }
+  
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .nav-left a,
+  .nav-right a {
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  
+  .nav-left a:hover,
+  .nav-right a:hover {
     color: red;
-}
+  }
+  .nav-left a {
+    margin-right: 60px;
+  }
+  
